# prediction-market-trading-framework

./: .gitignore  INVENTORY.md  README.md  decision_engine.md  hypotheses.md  project_scope.md  pyproject.toml  regime_and_signal_map.md  scoring_framework.md  signal_matrix.md  system_architecture.md  trade_lifecycle.md  wallet_scoring_rubric.md
docs/research/: framework_overview.md
docs/strategy/: evaluation_framework.md  probability_weighted_framework.md  regime_and_signal_map.md  scoring_framework.md  signal_matrix.md  wallet_scoring_rubric.md
examples/: run_synthetic_experiment.py
reports/: Deep-Research-on-Translating-Equity-Financial-Research-to-Prediction-Markets.txt
src/prediction_market_trading/: __init__.py
src/prediction_market_trading/config/: __init__.py  settings.py
src/prediction_market_trading/decision/: __init__.py  engine.py
src/prediction_market_trading/evaluation/: __init__.py  metrics.py
src/prediction_market_trading/inference/: __init__.py  engine.py
src/prediction_market_trading/lifecycle/: __init__.py  machine.py
src/prediction_market_trading/portfolio/: __init__.py  sizing.py
src/prediction_market_trading/replay/: __init__.py  engine.py
src/prediction_market_trading/scoring/: __init__.py  rules.py
src/prediction_market_trading/signals/: __init__.py  features.py
src/prediction_market_trading/simulation/: __init__.py  scenarios.py
src/prediction_market_trading/state/: __init__.py  models.py
tests/: test_decision_engine.py  test_evaluation.py  test_replay.py  test_scoring.py
